--- a/projection/index.html
+++ b/projection/index.html
@@ -23,7 +23,8 @@
 			<nav id="nav">
 				<a href="index.html">Home</a>
 				<a href="generic.html">Generic</a>
-				<a href="elements.html">Elements</a>
+				<a href="elements.html">Calculator</a>
+				<a href="about.html">About Us</a>
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		</div>
